--- a/src/app/kinships/create/create.component.scss
+++ b/src/app/kinships/create/create.component.scss
@@ -25,9 +25,35 @@
   color: #5cb85c;
 }
 
-
 @media (max-width: 770px) {
   #divForm {
     flex-direction: column;
+  }
+}
+
+.btn-sub {
+  text-align: center;
+}
+
+.icons {
+  display: inline;
+}
+
+.attribute {
+  font-size: 95%;
+}
+
+.close-icons {
+  position: absolute;
+  right: 0%;
+  top: -10px;
+}
+.container-position{
+  position: relative;
+}
+@media (max-width: 770px) {
+  .close-icons {
+    right: -20px;
+    top: -20px;
   }
 }
