--- a/src/app/people/inspect/inspect.component.html
+++ b/src/app/people/inspect/inspect.component.html
@@ -55,9 +55,9 @@
   </div>
   <!-- Actions -->
   <div class="row" *ngIf="!isLoading">
-    <div class="col">
-      <button mat-raised-button class="mt-3 mr-sm-3 mr-1" color="primary" (click)="openInspectKinshipsDialog(person.id)">Show kinships</button>
-      <button mat-raised-button class="mt-sm-3 mt-1 mr-sm-3 mr-1" (click)="openEditDialog(person.id)">Edit</button>
+    <div class="col icons">
+      <button mat-raised-button class="mt-3 mr-sm-3 mr-1" color="show" (click)="openInspectKinshipsDialog(person.id)">Show kinships</button>
+      <button mat-raised-button class="mt-sm-3 mt-1 mr-sm-3 mr-1" color="edit" (click)="openEditDialog(person.id)">Edit</button>
       <button mat-raised-button class="mt-sm-3 mt-1 mr-sm-3 mr-1" color="accent" (click)="promptDeletePerson(person.id, person.name, person.lastName)">Delete</button>
     </div>
   </div>
