--- a/src/app/people/inspect/inspect.component.scss
+++ b/src/app/people/inspect/inspect.component.scss
@@ -3,3 +3,20 @@
   right: 0;
   top: 0;
 }
+
+.mat-accent{
+  color: white;
+  background-color: red;
+}
+.mat-edit{
+  color: white;
+  background-color: royalblue!important;
+}
+.mat-show{
+  background-color: #53c76c!important;
+  color: white;
+}
+.icons{
+  display: flex;
+  justify-content: center;
+}
