--- a/src/app/people/list/list.component.html
+++ b/src/app/people/list/list.component.html
@@ -1,4 +1,7 @@
 <section class="container">
+    <div class="d-flex flex-row justify-content-center">
+        <p class="mat-display-1 mb-3">List People</p>
+      </div>
   <!-- Loading -->
   <div class="row" *ngIf="isLoading">
     <div class="col">
@@ -12,12 +15,13 @@
     <!-- Search input -->
     <div class="col-sm col-12">
       <mat-form-field style="width: 100%;">
+        <mat-icon matPrefix class="search">search</mat-icon>
         <input matInput (keyup)="filterTableData($event.target.value)" placeholder="Search" />
       </mat-form-field>
     </div>
     <!-- Create button -->
     <div class="col-auto pb-sm-0 pb-3">
-      <button mat-raised-button color="primary" (click)="openCreateDialog()">Create person</button>
+      <button mat-raised-button color="primary" (click)="openCreateDialog()">Create Person</button>
     </div>
   </div>
   <!-- People table -->
@@ -28,31 +32,31 @@
         <mat-table [dataSource]="peopleDataSource" matSort matSortDisableClear style="min-width: 750px;">
           <!-- Name column -->
           <ng-container matColumnDef="name">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
-            <mat-cell *matCellDef="let person">{{person.name}} {{person.lastName}}</mat-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header class="title-table">Name</mat-header-cell>
+            <mat-cell *matCellDef="let person" class="table">{{person.name}} {{person.lastName}}</mat-cell>
           </ng-container>
           <!-- Document column -->
           <ng-container matColumnDef="document">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>Document</mat-header-cell>
-            <mat-cell *matCellDef="let person">{{person.document}}</mat-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header class="title-table">Document</mat-header-cell>
+            <mat-cell *matCellDef="let person"class="table">{{person.document}}</mat-cell>
           </ng-container>
           <!-- Document type column -->
           <ng-container matColumnDef="documentType">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>Document Type</mat-header-cell>
-            <mat-cell *matCellDef="let person">{{person.documentType}}</mat-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header class="title-table">Document Type</mat-header-cell>
+            <mat-cell *matCellDef="let person"class="table">{{person.documentType}}</mat-cell>
           </ng-container>
           <!-- Country column -->
           <ng-container matColumnDef="country">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>Country</mat-header-cell>
-            <mat-cell *matCellDef="let person">{{person.country}}</mat-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header class="title-table">Country</mat-header-cell>
+            <mat-cell *matCellDef="let person"class="table">{{person.country}}</mat-cell>
           </ng-container>
           <!-- Actions column -->
           <ng-container matColumnDef="actions">
-            <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
-            <mat-cell *matCellDef="let person">
-              <mat-icon matTooltip="Show info" class="action-icon" (click)="openInspectDialog(person.id)">info</mat-icon>
-              <mat-icon matTooltip="Edit" class="action-icon" (click)="openEditDialog(person.id)">edit</mat-icon>
-              <mat-icon matTooltip="Delete" class="action-icon action-delete" (click)="promptDeletePerson(person.id, person.name, person.lastName)">delete</mat-icon>
+            <mat-header-cell *matHeaderCellDef class="title-table">Actions</mat-header-cell>
+            <mat-cell *matCellDef="let person"class="table">
+              <mat-icon matTooltip="Show info" class="action-icon info table" (click)="openInspectDialog(person.id)">info</mat-icon>
+              <mat-icon matTooltip="Edit" class="action-icon edit table" (click)="openEditDialog(person.id)">edit</mat-icon>
+              <mat-icon matTooltip="Delete" class="action-icon delete table" (click)="promptDeletePerson(person.id, person.name, person.lastName)">delete</mat-icon>
             </mat-cell>
           </ng-container>
           <mat-header-row *matHeaderRowDef="columnsToDisplay"></mat-header-row>
