--- a/src/app/people/list/list.component.html
+++ b/src/app/people/list/list.component.html
@@ -57,6 +57,7 @@
               <mat-icon matTooltip="Show info" class="action-icon info table" (click)="openInspectDialog(person.id)">info</mat-icon>
               <mat-icon matTooltip="Edit" class="action-icon edit table" (click)="openEditDialog(person.id)">edit</mat-icon>
               <mat-icon matTooltip="Delete" class="action-icon delete table" (click)="promptDeletePerson(person.id, person.name, person.lastName)">delete</mat-icon>
+              <mat-icon matTooltip="Show tree" class="action-icon tree table" [routerLink]="['/people/' + person.id + '/tree']">supervised_user_circle</mat-icon>
             </mat-cell>
           </ng-container>
           <mat-header-row *matHeaderRowDef="columnsToDisplay"></mat-header-row>
