--- a/src/app/people/tree/tree.component.html
+++ b/src/app/people/tree/tree.component.html
@@ -1,9 +1,46 @@
-<section class="container">
-  <div *ngIf="isLoading">
-    <h5>Loading...</h5>
+<section class="container-fluid">
+  <!-- Loading -->
+  <div class="row" *ngIf="isLoading">
+    <div class="col">
+      <div class="d-flex justify-content-center pb-3 pt-3">
+        <mat-spinner></mat-spinner>
+      </div>
+    </div>
   </div>
-  <div *ngIf="!isLoading">
-    <h3>{{person.name}} {{person.lastName}}'s family tree</h3>
+  <!-- Family tree -->
+  <div class="row" *ngIf="!isLoading">
+    <div class="col">
+      <div class="family-tree-wrapper">
+        <!-- Title -->
+        <h3 class="text-center">{{treeData.owner.name}} {{treeData.owner.lastName}}'s family tree</h3>
+        <!-- Level -->
+        <div *ngFor="let level of treeData.levels; let levelIndex = index" class="d-flex flex-wrap justify-content-center mt-3 pt-3 pb-3 family-tree-level-{{levelIndex}}">
+          <!-- Node -->
+          <mat-card *ngFor="let node of level" [ngClass]="{'empty-node': !node.relative, 'owner-node': !node.kinshipType}" class="m-1">
+            <mat-card-header class="justify-content-center text-center">
+              <!-- Relative -->
+              <mat-card-title *ngIf="node.relative">{{node.relative.name}} {{node.relative.lastName}}</mat-card-title>
+              <mat-card-title *ngIf="!node.relative">
+                <button mat-icon-button>
+                  <mat-icon>add</mat-icon>
+                </button>
+              </mat-card-title>
+              <!-- Kinship type -->
+              <mat-card-subtitle *ngIf="node.kinshipType">{{node.kinshipType.name}}</mat-card-subtitle>
+              <mat-card-subtitle *ngIf="!node.kinshipType">Owner</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content></mat-card-content>
+          </mat-card>
+        </div>
+      </div>
+    </div>
   </div>
-  <angular-org-chart [data]="orgData"></angular-org-chart>
+</section>
+<section class="zoom-buttons">
+  <div class="mr-3">
+    <button (click)="increaseZoom()" mat-fab color="primary"><mat-icon>zoom_in</mat-icon></button>
+  </div>
+  <div class="mr-3 mt-2">
+    <button (click)="decreaseZoom()" mat-fab color="primary"><mat-icon>zoom_out</mat-icon></button>
+  </div>
 </section>
